syntax = "proto3";

package actors;

option java_package = "com.bethibande.actors.proto";

service MessageService {

  rpc SendMessage(SendMessageRequest) returns (MessageResponse) {  }

}

message SendMessageRequest {
  MessageTarget target = 1;
  MessageTarget origin = 2;
  MessageBody body = 10;
}

message MessageTarget {
  string shard = 1;
  string type = 2;
  string id = 3;
}

message MessageBody {
  bytes data = 1;
}

message MessageResponse {
  enum MessageStatus {
    Processed = 0;
    Error = 1;
  }

  MessageStatus status = 1;
}